# facerecognition-mobile

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/facialdetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/facialdetection/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/facialdetection/: ExampleUnitTest.java
appcpp/: build.gradle  google-services.json
appcpp/src/androidTest/java/com/example/appcpp/: ExampleInstrumentedTest.java
appcpp/src/main/: AndroidManifest.xml
appcpp/src/main/cpp/: CMakeLists.txt  appcpp.cpp
appcpp/src/main/java/com/example/appcpp/: FaceData.java  FaceDataEntity.java  FileUtil.java  MainActivityCPP.java  MainAdapter.java  MainModel.java
appcpp/src/main/res/layout/: activity_main_cpp.xml  fragment_camera.xml  item_face_data.xml
appcpp/src/main/res/values/: dimens.xml
appcpp/src/test/java/com/example/appcpp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary4100/: build.gradle
